#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.
# File: configure.in


AC_PREREQ(2.58)
AC_INIT(FULL-PACKAGE-NAME, VERSION, BUG-REPORT-ADDRESS)
AC_CONFIG_SRCDIR([papi.c])
AC_CONFIG_HEADER([config.h])

#checking for OS
OS="`uname | tr '[A-Z]' '[a-z]'`"
case "$OS" in
  cygwin*) OS=cygwin;;
  SunOS)   OS=solaris ;;
  sunos)   OS=solaris ;;
  irix64)  OS=irix ;;
  "unicos/mp") OS=unicos;;
esac

T3EOS="`uname -a | tr '[A-Z]' '[a-z]' | grep unicos`"
if test "$T3EOS" != ""; then
   OS=unicos
fi

#checking for catamount
/bin/rm -f ckcat
cc ckcatamount.c 2>&1 | cat > ckcat
if test "`cat ckcat | grep "IS_CATAMOUNT"`" != ""; then
OS=catamount
fi

#echo $OS
#AC_SUBST($OS)

#checking for OS version number
case "$OS" in
  aix) OSVER="`uname -v`";;
  irix) OSVER="`uname -r`";;
  linux) OSVER="`uname -r`";;
  netbsd) OSVER="`uname -r`";;
  osf1) OSVER="`uname -r | sed -e 's/^V//'`" ;;
  solaris) OSVER="`uname -r`";;
esac
#echo $OSVER
#AC_SUBST($OSVER)

#checking for CPU
R="(R)"
tm="(tm)"
TM="(TM)"
CPU=""
case "$OS" in
  aix)
         CPU="`/usr/sbin/lsattr -E -l proc0 | grep type | cut -d '_' -f 2 | cut -d ' ' -f 1 | tr '[A-Z]' '[a-z]'`"
         if test "$CPU" = ""; then
         CPU="`/usr/sbin/lsattr -E -l proc1 | grep type | cut -d '_' -f 2 | cut -d ' ' -f 1 | tr '[A-Z]' '[a-z]'`"
         fi
         ;;
  linux) 
         if test "`cat /proc/cpuinfo | grep GenuineIntel`" != "" ; then
           made=GenuineIntel
           family="`cat /proc/cpuinfo | grep family | cut -d: -f2 | cut -d' ' -f2 | sed '2,$d'`"
           model="`cat /proc/cpuinfo | grep model | cut -d: -f2 | cut -d' ' -f2 | sed '2,$d'`"
           if test "$family" = "15"; then
             if test "$model" = "3"; then
               CPU=em64t
             elif test "$model" = "2"; then
               CPU=p4
             fi
           fi
           if test "$CPU" = "" ; then       
             if test "`cat /proc/cpuinfo | grep "Pentium${R} 4"`" != ""; then
               CPU=p4
             elif test "`cat /proc/cpuinfo | grep "Itanium 2"`" != ""; then
               CPU=itanium2 
             elif test "`cat /proc/cpuinfo | grep Itanium`" != ""; then
               CPU=itanium
             elif test "`cat /proc/cpuinfo | grep "Pentium III"`" != ""; then
               CPU=p3
             elif test "`cat /proc/cpuinfo | grep "Pentium II"`" != ""; then
               CPU=p2
             else CPU=p3
             fi
           fi 
         elif test "`cat /proc/cpuinfo | grep AuthenticAMD`" != ""; then
           made=AuthenticAMD
           if test "`cat /proc/cpuinfo | grep "Athlon${tm} 64"`" != ""; then
             CPU=opteron
           else CPU=athlon
           fi
           family="`cat /proc/cpuinfo | grep family | cut -d: -f2 | cut -d' ' -f2 | sed '2,$d'`"
           model="`cat /proc/cpuinfo | grep model | cut -d: -f2 | cut -d' ' -f2 | sed '2,$d'`"
           if test "$family" = "15"; then
             if test "$model" = "5"; then
               CPU=opteron
             fi
           fi
         else
           family=`uname -m`
           if test "$family" = "ppc64"; then
             echo "family = ppc64"
             CPU_info="`cat /proc/cpuinfo | grep cpu | cut -d: -f2 | cut -d' ' -f2 | sed '2,$d'`"
             case "$CPU_info" in
               PPC970*) CPU="PPC970";;
               POWER4*) CPU="POWER4";;
               POWER5*) CPU="POWER5";;
            esac
          fi
         fi
             
         ;;
  solaris) 
         processor=`uname -p`
           #this determines if its an Ultrasparc I,II,or III
         if test "$processor" = "sparc"; then
           CPU=`/bin/uname -a | egrep sun4u`
           if test "$CPU" = ""; then
             echo "Sorry but for Solaris you need to have an Ultrasparc for PAPI to work"
             exit 1
           else CPU=ultra
           fi
         fi
         ;;
  irix) CPU=`hinv -t cpu | cut -d ' ' -f 2 | tr '[A-Z]' '[a-z]'`;;
  osf1) CPU=`uname -p`;;
  unicos)
        if test "`uname -a | tr '[A-Z]' '[a-z]' | grep crayx1`" != ""; then
          CPU=x1-msp
        fi
        if test "`uname -a | tr '[A-Z]' '[a-z]' | grep t3e`" != ""; then
          CPU=t3e
        fi
        ;;
esac 
#echo $CPU
#AC_SUBST($CPU)

AC_ARG_WITH(bitmode,
            [  --with-bitmode=32/64       Specify bit mode of library],
            [bitmode="$with_bitmode"],
            [bitmode=32]
            )
#echo $bitmode
case "$bitmode" in
   64)
      BM="-64bit" ;;
   32)
      BM="" ;;
    *)
      echo "The bitmode "$with_bitmode" you specified is not supported"
      exit -1
      ;;
esac

dnl AC_ARG_WITH(perfctr,
dnl             [  --with-perfctr=<path>     Specify path of perfctr on linux/x86/x86_64/PPC/PPC64 system ],
dnl             [perfctr=$withval],
dnl             [perfctr=./perfctr-2.6.x]
dnl             )
dnl AC_ARG_WITH(pfm,
dnl             [  --with-pfm=<path>     Specify path of pfm build tree on linux/ia64 system ],
dnl             [pfm=$withval],
dnl             [pfm=default]
dnl             )

# modified by Yuanlei Zhang
#perfctr=""
#perfctr_prefix=""
#case "$OS" in
#    linux|solaris)
#        # check for pre-installed perfctr (/usr/lib)
#        AC_CHECK_LIB([perfctr], [perfctr_info], [perfctr_prefix="/usr"])
#
#        # check for user specified perfctr (--with-perfctr)
#        if test "x$perfctr_prefix" = "x"; then
#            AC_ARG_WITH(perfctr,
#                        [  --with-perfctr=<path>     Specify path of perfctr on linux/x86/x86_64/PPC/PPC64 system ],
#                        [perfctr=$withval]
#                        )
#            if test "x$perfctr" != "x"; then
#                AC_CHECK_FILE([$perfctr/examples/perfex/perfex], [], [
#                              AC_MSG_WARN([Invalid perfctr path: $perfctr])
#                              perfctr=""
#                              ])
#                if test "x$perfctr" != "x"; then
#                    perfctrInfo="`$perfctr/examples/perfex/perfex -i | grep 'PerfCtr Info:'`"
#                    if test "x$perfctrInfo" = "x"; then
#                        AC_MSG_WARN([Perfctr is not properly installed])
#                        perfctr=""
#                    fi
#                fi
#            fi
#        fi
#
#        # 3 options of using perfctr
#        if test "x$perfctr_prefix" != "x"; then
#            echo "use pre-installed perfctr in $perfctr_prefix/lib"
#        elif test "x$perfctr" != "x"; then
#            echo "use user specified perfctr in $perfctr"
#        else
#            echo "use default perfctr distributed with PAPI"
#        fi
#        ;;
#    *)
#        ;;
#esac
#AC_SUBST(perfctr_prefix)
#AC_SUBST(perfctr)
# end of Yuanlei's modification

AC_ARG_WITH(pmapi,
            [  --with-pmapi=<path>     Specify path of pmapi on aix system ],
            [pmapi=$withval],
            [pmapi=default]
            )
case "$OS" in
   aix)
      case "$pmapi" in
         default)
             case "$CPU" in
                power3)
		  if test "${OSVER}" = "5"; then
		     PMAPI="/usr/pmapi"
		  else
		     PMAPI="/usr/lpp/pmtoolkit"
		  fi
		  ;;
                power4) PMAPI="/usr/pmapi" ;;
                 power5) PMAPI="/usr/pmapi" ;;
             esac
	      ;;
          *)
             PMAPI="$pmapi" ;;
      esac
      ;;
   *)
      case "$pmapi" in
         default) ;;
         *)  echo "pmapi is not needed on this platform" 
	     ;;
      esac
      PMAPI=""
      ;;
esac 
#AC_MSG_RESULT($PMAPI)
AC_SUBST(PMAPI)

case "$OS" in
   aix)
      if test "${OSVER}" = "5"; then
         if test "${CPU}" = "power3"; then 
               MAKEVER="$OS""$OSVER"-"$CPU""$BM"
         else
               MAKEVER="$OS"-"$CPU""$BM"
         fi
      else
         if test "${CPU}" = "power3"; then   
            if test "${bitmode}" = "64"; then
              echo "The bitmode "$with_bitmode" you specified is not supported"
              exit -1
            fi
            MAKEVER="$OS"-"$CPU"
         else
               MAKEVER="$OS"-"$CPU""$BM"
         fi
       fi
       ;;
   catamount)
	   MAKEVER="$OS"-perfctr-opteron
	   ;;
	   
   solaris)
       if test "${bitmode}" = "64"; then
          if test "`isainfo -v | grep "64"`" = ""; then
             echo "The bitmode "$with_bitmode" you specified is not supported"
             exit -1
          fi
       fi
       MAKEVER="$OS"-"$CPU""$BM"
       ;;
   linux) 
       case "$CPU" in
            alpha)
                 if test "${bitmode}" = "64"; then
                   echo "The bitmode "$with_bitmode" you specified is not supported"
                   exit -1
                 fi
                 MAKEVER="$OS"-"$CPU" ;;
            itanium)
                 if test "${with_bitmode}" = "32"; then
                   echo "The bitmode "$with_bitmode" you specified is not supported"
                   exit -1
                 fi
                 MAKEVER="$OS"-pfm-"$CPU" ;;
            itanium2)
                 if test "${with_bitmode}" = "32"; then
                   echo "The bitmode "$with_bitmode" you specified is not supported"
                   exit -1
                 fi
                 MAKEVER="$OS"-pfm-"$CPU" ;;
            athlon)
                 if test "${bitmode}" = "64"; then
                   echo "The bitmode "$with_bitmode" you specified is not supported"
                   exit -1
                 fi
                 MAKEVER="$OS"-perfctr-"$CPU" ;;
            opteron)
                 if test "${with_bitmode}" = "32"; then
                 	MAKEVER="$OS"-perfctr-"$CPU""-32bit" 
                 else
                 	MAKEVER="$OS"-perfctr-"$CPU" 
		         fi
		         ;; 
            em64t)
                 if test "${with_bitmode}" = "32"; then
                        MAKEVER="$OS"-perfctr-"$CPU""-32bit"
                 else
                        MAKEVER="$OS"-perfctr-"$CPU" 
                 fi
                ;;
	        p4)
                 if test "${bitmode}" = "64"; then
                   echo "The bitmode "$with_bitmode" you specified is not supported"
                   exit -1
                 fi
                 MAKEVER="$OS"-perfctr-"$CPU" ;;
            p3)
                 if test "${bitmode}" = "64"; then
                   echo "The bitmode "$with_bitmode" you specified is not supported"
                   exit -1
                 fi
                 MAKEVER="$OS"-perfctr-"$CPU" ;;
            p2)
                 if test "${bitmode}" = "64"; then
                   echo "The bitmode "$with_bitmode" you specified is not supported"
                   exit -1
                 fi
                 MAKEVER="$OS"-perfctr-"$CPU" ;;
            POWER4|POWER5|PPC970)
                 MAKEVER="$OS"-perfctr-"$CPU" ;;
       esac
       ;;
  irix)
       MAKEVER="$OS"-"$CPU""$BM"
       ;;
  osf1)
       case "$CPU" in
            alpha)
                 MAKEVER=tru64-"$CPU" ;;
       esac
       ;;
  unicos)
                 MAKEVER="$OS"-"$CPU" ;;
esac
#echo $MAKEVER
case "$MAKEVER" in 
    aix-power3)                   CC=xlc ;;
    aix-power4)                   CC=xlc ;;
    aix-power4-64bit)             CC=xlc ;;
    aix-power5)                   CC=xlc ;;
    aix-power5-64bit)             CC=xlc ;;
    aix5-power3)                  CC=xlc ;;
    aix5-power3-64bit)            CC=xlc ;;
    catamount-perfctr-opteron)    CC=gcc ;;
    dadd-alpha)                   CC=cc ;;
    irix-mips)                    CC=cc ;;
    irix-mips-64bit)              CC=cc ;;
    linux-alpha)                  CC=gcc ;;
    linux-perfctr-athlon)         CC=gcc ;;
    linux-perfctr-em64t)          CC=gcc ;;
    linux-perfctr-em64t-32bit)    CC=gcc ;;
    linux-perfctr-opteron)        CC=gcc ;;
    linux-perfctr-opteron-32bit)  CC=gcc ;;
    linux-perfctr-p2)             CC=gcc ;;
    linux-perfctr-p3)             CC=gcc ;;
    linux-perfctr-p4)             CC=gcc ;;
    linux-pfm-itanium)            CC=gcc ;;
    linux-pfm-itanium2)           CC=gcc ;;
    solaris-ultra)                CC=cc ;;
    solaris-ultra-64bit)          CC=cc ;;
    tru64-alpha)                  CC=cc ;;
    unicos-t3e)                   CC=cc ;;
    unicos-x1-msp)                CC=cc ;;
    unicos-x1-ssp)                CC=cc ;;
    linux-perfctr-POWER4|linux-perfctr-POWER5|linux-perfctr-PPC970)
    CC=gcc
    ;;
    *)
    echo Platform $MAKEVER is not supported
    exit -1
    ;;
esac

AC_SUBST(MAKEVER)
AC_SUBST(prefix)

# Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_CPP
#AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB

# Checks for libraries.
if test "$OS" = "solaris"; then
AC_CHECK_LIB([cpc], [cpc_take_sample], [], [
      echo "Error, libcpc.a is needed on solaris!"
      exit -1
      ])
fi

AC_CHECK_LIB([dl], [dlopen])

AC_CHECK_LIB([m], [sqrt])

if test "$CPU" = "itanium"; then
AC_CHECK_LIB([pfm], [pfm_initialize])
#AC_CHECK_LIB([pfm], [pfm_initialize], [], [
#      echo "Error, libpfm.a is needed on itanium!"
#      exit -1
#      ])
fi
if test "$CPU" = "itanium2"; then
#AC_CHECK_LIB([pfm], [pfm_initialize], [], [
#      echo "Error, libpfm.a is needed on itanium2!"
#      exit -1
#      ])
AC_CHECK_FILE(/etc/sgi-release,[
	AC_CHECK_LIB([pfm], [pfm_initialize],[
	altix="-DALTIX"
	pfm_prefix="/usr"],[
	altix=""
	pfm_prefix=""],[])
	])
fi

if test "$OS" = "aix"; then
PMINIT=""
AC_CHECK_LIB([pmapi], [pm_initialize], [
      PMINIT="-DPM_INITIALIZE"], [
      AC_CHECK_LIB([pmapi], [pm_init], [
      PMINIT="-DPM_INIT"], [
        echo "Error, libpmapi.a is needed on power!"
        exit -1
        ])],
      [])

#AC_CHECK_LIB([pmapi], [pm_init], [], [
#      echo "Error, libpmapi.a is needed on power!"
#      exit -1
#      ])
fi

if test "$prefix" = "NONE"; then
        my_prefix="$ac_default_prefix"
else
        my_prefix="$prefix"
fi
if test "$datadir" = '${prefix}/share'; then
        datadir="$my_prefix/share/papi"
else 
	datadir="$datadir/share/papi"
fi
PAPI_DATADIR=`eval echo "$datadir/"`
AC_DEFINE_UNQUOTED(PAPI_DATADIR, "$PAPI_DATADIR", [package data directory])

AC_CHECK_LIB([pthread], [pthread_self])

if test "$OS" = "osf1"; then
AC_CHECK_LIB([rt], [clock_gettime])
fi

# FIXME: Replace `main' with a function in `-llipr':
AC_CHECK_LIB([lipr], [main])

# Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([assert.h ctype.h dirent.h dlfcn.h errno.h expat.h fcntl.h inttypes.h libgen.h limits.h malloc.h math.h memory.h signal.h stdarg.h stdio.h stdlib.h string.h stropts.h sys/ioctl.h sys/mman.h sys/processor.h sys/procfs.h sys/resource.h sys/stat.h sys/syscall.h sys/sysinfo.h sys/sysmp.h sys/time.h sys/timers.h sys/times.h sys/types.h ucontext.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_UID_T
AC_C_INLINE
AC_TYPE_MODE_T
AC_TYPE_OFF_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_CHECK_DECLS([sys_siglist])
AC_HEADER_TIME
AC_C_VOLATILE

# Checks for library functions.
AC_FUNC_FORK
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_FUNC_MMAP
AC_FUNC_REALLOC
AC_FUNC_SELECT_ARGTYPES
AC_FUNC_SETVBUF_REVERSED
AC_TYPE_SIGNAL
AC_FUNC_STRCOLL
AC_FUNC_STRERROR_R
AC_FUNC_VPRINTF
#AC_CHECK_FUNCS([bzero clock_gettime getcwd gethrtime getpagesize gettimeofday memchr memmove memset munmap realpath select sqrt strcasecmp strchr strcspn strdup strerror strncasecmp strpbrk strrchr strspn strstr strtol strtoul sysinfo uname])

AC_ARG_WITH(tls,
            [  --with-tls=<no>         To disable tls support ],
            [tls=$withval],
            [tls=yes]
            )
case "$tls" in
   yes)
      #       NOTLS="" ;;
      dnl ***********************************
      dnl *** Checks for working __thread ***
      dnl ***********************************
      with_tls="__thread"
      AC_MSG_CHECKING(for working __thread)
      #echo $with_tls
      AC_TRY_RUN([
             #include <pthread.h>

             extern __thread int i;
             static int res1, res2;

             void thread_main (void *arg)
             {
               i = arg;
               sleep (1);
               if (arg == 1)
                  res1 = (i == arg);
               else
                  res2 = (i == arg);
             }

	     __thread int i;

             int main () 
             {
               pthread_t t1, t2;

               i = 5;

               pthread_create (&t1, NULL, thread_main, 1);
               pthread_create (&t2, NULL, thread_main, 2);

               pthread_join (t1, NULL);
               pthread_join (t2, NULL);

               return !(res1 + res2 == 2);
             }
      ], [
            AC_MSG_RESULT(yes)
      ], [
            AC_MSG_RESULT(no)
            with_tls=pthread
      ])

     #if test "x$TARGET" = "xAMD64" -o "x$TARGET" = "xX86"; then
     if test "$OS" = "linux"; then
        if test "x$with_tls" = "x__thread"; then
                #
                # On some linux distributions, TLS works in executables, but linking
                # against a shared library containing TLS fails with:
                # undefined reference to `__tls_get_addr'
                #
                rm -f conftest.c conftest.so conftest
                echo "static __thread int foo; void main () { foo = 5; }" > conftest.c
                gcc -fPIC --shared -o conftest.so conftest.c > /dev/null 2>&1
                gcc -o conftest conftest.so > /dev/null 2>&1
                if test ! -f conftest; then
                   AC_MSG_WARN([Disabling usage of __thread.]);
                   with_tls=pthread
                fi
                rm -f conftest.c conftest.so conftest
        fi
     #else
     #   with_tls=pthread
     fi

     if test "x$with_tls" = "x__thread"; then
        AC_DEFINE(HAVE_KW_THREAD)
      # Pass the information to libgc
        #CPPFLAGS="$CPPFLAGS -DUSE_COMPILER_TLS"
        #export CPPFLAGS
        NOTLS="-DUSE_COMPILER_TLS"
     else
        NOTLS="-DNO_TLS"
     fi
     ;;

 no)
             NOTLS="-DNO_TLS" ;;
 esac

#AC_MSG_RESULT($NOTLS)
AC_SUBST(NOTLS)
AC_SUBST(altix)
AC_SUBST(PMINIT)
# AC_SUBST(perfctr_prefix)
# AC_SUBST(perfctr)
# AC_SUBST(pfm_prefix)
# AC_SUBST(pfm)

get_bitmode()
{
 input="bad"
 while [ test "${input}" != "ok" ]
 do
   input="ok"
   echo 
   echo "Do you want to install 64bit mode library?"
   echo 
   echo -n "Choice is required [yes/no]: "
   read num
   case "${num}" in
     yes)
        bitmode=64
        ;;
     no)
        bitmode=""
        ;;
     *)
        echo
        echo Warning: invalid choice \'$num\'. Type again.
        echo
        input="bad"
        ;;
   esac
 done
}


AC_CONFIG_FILES([Makefile])
AC_OUTPUT
